versions/0.9.0/_sources/refs/_aws-cdk_aws-elasticloadbalancing.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"s8J2aRKEp9YfM/k7WGPWoH2ZjkEh5f6UzdYSLsbG3jA="}

@aws-cdk/aws-elasticloadbalancing
=================================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.ElasticLoadBalancing/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.ElasticLoadBalancing" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.ElasticLoadBalancing --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.ElasticLoadBalancing" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/elasticloadbalancing/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:elasticloadbalancing:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="elasticloadbalancing" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>elasticloadbalancing</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:elasticloadbalancing:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='elasticloadbalancing', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-elasticloadbalancing/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-elasticloadbalancing@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-elasticloadbalancing": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-elasticloadbalancing@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-elasticloadbalancing/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-elasticloadbalancing@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-elasticloadbalancing": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-elasticloadbalancing@0.9.0



.. mdinclude:: ./__aws-cdk_aws-elasticloadbalancing.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-elasticloadbalancing

LoadBalancerCanonicalHostedZoneName
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerCanonicalHostedZoneName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.LoadBalancerCanonicalHostedZoneName;

      .. code-tab:: javascript

         const { LoadBalancerCanonicalHostedZoneName } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { LoadBalancerCanonicalHostedZoneName } from '@aws-cdk/aws-elasticloadbalancing';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancerCanonicalHostedZoneNameId
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerCanonicalHostedZoneNameId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.LoadBalancerCanonicalHostedZoneNameId;

      .. code-tab:: javascript

         const { LoadBalancerCanonicalHostedZoneNameId } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { LoadBalancerCanonicalHostedZoneNameId } from '@aws-cdk/aws-elasticloadbalancing';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancerDnsName
^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerDnsName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.LoadBalancerDnsName;

      .. code-tab:: javascript

         const { LoadBalancerDnsName } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { LoadBalancerDnsName } from '@aws-cdk/aws-elasticloadbalancing';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancerName
^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.LoadBalancerName;

      .. code-tab:: javascript

         const { LoadBalancerName } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { LoadBalancerName } from '@aws-cdk/aws-elasticloadbalancing';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancerSourceSecurityGroupGroupName
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerSourceSecurityGroupGroupName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.LoadBalancerSourceSecurityGroupGroupName;

      .. code-tab:: javascript

         const { LoadBalancerSourceSecurityGroupGroupName } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { LoadBalancerSourceSecurityGroupGroupName } from '@aws-cdk/aws-elasticloadbalancing';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancerSourceSecurityGroupOwnerAlias
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerSourceSecurityGroupOwnerAlias(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.LoadBalancerSourceSecurityGroupOwnerAlias;

      .. code-tab:: javascript

         const { LoadBalancerSourceSecurityGroupOwnerAlias } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { LoadBalancerSourceSecurityGroupOwnerAlias } from '@aws-cdk/aws-elasticloadbalancing';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-elasticloadbalancing.cloudformation

LoadBalancerResource
~~~~~~~~~~~~~~~~~~~~

.. py:class:: LoadBalancerResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource;

      .. code-tab:: javascript

         const { cloudformation.LoadBalancerResource } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { cloudformation.LoadBalancerResource } from '@aws-cdk/aws-elasticloadbalancing';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LoadBalancerResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LoadBalancerResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: loadBalancerCanonicalHostedZoneName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerCanonicalHostedZoneName` *(readonly)*


   .. py:attribute:: loadBalancerCanonicalHostedZoneNameId

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerCanonicalHostedZoneNameId` *(readonly)*


   .. py:attribute:: loadBalancerDnsName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerDnsName` *(readonly)*


   .. py:attribute:: loadBalancerSourceSecurityGroupGroupName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerSourceSecurityGroupGroupName` *(readonly)*


   .. py:attribute:: loadBalancerSourceSecurityGroupOwnerAlias

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerSourceSecurityGroupOwnerAlias` *(readonly)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerName` *(readonly)*

   .. py:class:: AccessLoggingPolicyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancing;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource.AccessLoggingPolicyProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.AccessLoggingPolicyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.AccessLoggingPolicyProperty } from '@aws-cdk/aws-elasticloadbalancing';





      .. py:attribute:: enabled

         ``LoadBalancerResource.AccessLoggingPolicyProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-accessloggingpolicy.html#cfn-elb-accessloggingpolicy-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: s3BucketName

         ``LoadBalancerResource.AccessLoggingPolicyProperty.S3BucketName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-accessloggingpolicy.html#cfn-elb-accessloggingpolicy-s3bucketname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: emitInterval

         ``LoadBalancerResource.AccessLoggingPolicyProperty.EmitInterval``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-accessloggingpolicy.html#cfn-elb-accessloggingpolicy-emitinterval


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: s3BucketPrefix

         ``LoadBalancerResource.AccessLoggingPolicyProperty.S3BucketPrefix``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-accessloggingpolicy.html#cfn-elb-accessloggingpolicy-s3bucketprefix


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: AppCookieStickinessPolicyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancing;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource.AppCookieStickinessPolicyProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.AppCookieStickinessPolicyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.AppCookieStickinessPolicyProperty } from '@aws-cdk/aws-elasticloadbalancing';





      .. py:attribute:: cookieName

         ``LoadBalancerResource.AppCookieStickinessPolicyProperty.CookieName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-AppCookieStickinessPolicy.html#cfn-elb-appcookiestickinesspolicy-cookiename


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: policyName

         ``LoadBalancerResource.AppCookieStickinessPolicyProperty.PolicyName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-AppCookieStickinessPolicy.html#cfn-elb-appcookiestickinesspolicy-policyname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: ConnectionDrainingPolicyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancing;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource.ConnectionDrainingPolicyProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.ConnectionDrainingPolicyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.ConnectionDrainingPolicyProperty } from '@aws-cdk/aws-elasticloadbalancing';





      .. py:attribute:: enabled

         ``LoadBalancerResource.ConnectionDrainingPolicyProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-connectiondrainingpolicy.html#cfn-elb-connectiondrainingpolicy-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: timeout

         ``LoadBalancerResource.ConnectionDrainingPolicyProperty.Timeout``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-connectiondrainingpolicy.html#cfn-elb-connectiondrainingpolicy-timeout


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: ConnectionSettingsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancing;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource.ConnectionSettingsProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.ConnectionSettingsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.ConnectionSettingsProperty } from '@aws-cdk/aws-elasticloadbalancing';





      .. py:attribute:: idleTimeout

         ``LoadBalancerResource.ConnectionSettingsProperty.IdleTimeout``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-connectionsettings.html#cfn-elb-connectionsettings-idletimeout


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: HealthCheckProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancing;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource.HealthCheckProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.HealthCheckProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.HealthCheckProperty } from '@aws-cdk/aws-elasticloadbalancing';





      .. py:attribute:: healthyThreshold

         ``LoadBalancerResource.HealthCheckProperty.HealthyThreshold``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-health-check.html#cfn-elb-healthcheck-healthythreshold


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: interval

         ``LoadBalancerResource.HealthCheckProperty.Interval``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-health-check.html#cfn-elb-healthcheck-interval


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: target

         ``LoadBalancerResource.HealthCheckProperty.Target``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-health-check.html#cfn-elb-healthcheck-target


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: timeout

         ``LoadBalancerResource.HealthCheckProperty.Timeout``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-health-check.html#cfn-elb-healthcheck-timeout


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: unhealthyThreshold

         ``LoadBalancerResource.HealthCheckProperty.UnhealthyThreshold``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-health-check.html#cfn-elb-healthcheck-unhealthythreshold


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: LBCookieStickinessPolicyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancing;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource.LBCookieStickinessPolicyProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.LBCookieStickinessPolicyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.LBCookieStickinessPolicyProperty } from '@aws-cdk/aws-elasticloadbalancing';





      .. py:attribute:: cookieExpirationPeriod

         ``LoadBalancerResource.LBCookieStickinessPolicyProperty.CookieExpirationPeriod``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-LBCookieStickinessPolicy.html#cfn-elb-lbcookiestickinesspolicy-cookieexpirationperiod


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: policyName

         ``LoadBalancerResource.LBCookieStickinessPolicyProperty.PolicyName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-LBCookieStickinessPolicy.html#cfn-elb-lbcookiestickinesspolicy-policyname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: ListenersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancing;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource.ListenersProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.ListenersProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.ListenersProperty } from '@aws-cdk/aws-elasticloadbalancing';





      .. py:attribute:: instancePort

         ``LoadBalancerResource.ListenersProperty.InstancePort``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-instanceport


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: loadBalancerPort

         ``LoadBalancerResource.ListenersProperty.LoadBalancerPort``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-loadbalancerport


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: protocol

         ``LoadBalancerResource.ListenersProperty.Protocol``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-protocol


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: instanceProtocol

         ``LoadBalancerResource.ListenersProperty.InstanceProtocol``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-instanceprotocol


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: policyNames

         ``LoadBalancerResource.ListenersProperty.PolicyNames``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-policynames


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


      .. py:attribute:: sslCertificateId

         ``LoadBalancerResource.ListenersProperty.SSLCertificateId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-sslcertificateid


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: PoliciesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancing;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource.PoliciesProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.PoliciesProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.PoliciesProperty } from '@aws-cdk/aws-elasticloadbalancing';





      .. py:attribute:: attributes

         ``LoadBalancerResource.PoliciesProperty.Attributes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-policy.html#cfn-ec2-elb-policy-attributes


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (json or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[]


      .. py:attribute:: policyName

         ``LoadBalancerResource.PoliciesProperty.PolicyName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-policy.html#cfn-ec2-elb-policy-policyname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: policyType

         ``LoadBalancerResource.PoliciesProperty.PolicyType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-policy.html#cfn-ec2-elb-policy-policytype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: instancePorts

         ``LoadBalancerResource.PoliciesProperty.InstancePorts``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-policy.html#cfn-ec2-elb-policy-instanceports


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


      .. py:attribute:: loadBalancerPorts

         ``LoadBalancerResource.PoliciesProperty.LoadBalancerPorts``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-policy.html#cfn-ec2-elb-policy-loadbalancerports


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined



LoadBalancerResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LoadBalancerResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResourceProps;

      .. code-tab:: javascript

         // cloudformation.LoadBalancerResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.LoadBalancerResourceProps } from '@aws-cdk/aws-elasticloadbalancing';





   .. py:attribute:: listeners

      ``AWS::ElasticLoadBalancing::LoadBalancer.Listeners``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-listeners


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.ListenersProperty` or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[]


   .. py:attribute:: accessLoggingPolicy

      ``AWS::ElasticLoadBalancing::LoadBalancer.AccessLoggingPolicy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-accessloggingpolicy


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.AccessLoggingPolicyProperty` or undefined


   .. py:attribute:: appCookieStickinessPolicy

      ``AWS::ElasticLoadBalancing::LoadBalancer.AppCookieStickinessPolicy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-appcookiestickinesspolicy


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.AppCookieStickinessPolicyProperty`)[] or undefined


   .. py:attribute:: availabilityZones

      ``AWS::ElasticLoadBalancing::LoadBalancer.AvailabilityZones``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-availabilityzones


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: connectionDrainingPolicy

      ``AWS::ElasticLoadBalancing::LoadBalancer.ConnectionDrainingPolicy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-connectiondrainingpolicy


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.ConnectionDrainingPolicyProperty` or undefined


   .. py:attribute:: connectionSettings

      ``AWS::ElasticLoadBalancing::LoadBalancer.ConnectionSettings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-connectionsettings


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.ConnectionSettingsProperty` or undefined


   .. py:attribute:: crossZone

      ``AWS::ElasticLoadBalancing::LoadBalancer.CrossZone``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-crosszone


      :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: healthCheck

      ``AWS::ElasticLoadBalancing::LoadBalancer.HealthCheck``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-healthcheck


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.HealthCheckProperty` or undefined


   .. py:attribute:: instances

      ``AWS::ElasticLoadBalancing::LoadBalancer.Instances``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-instances


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: lbCookieStickinessPolicy

      ``AWS::ElasticLoadBalancing::LoadBalancer.LBCookieStickinessPolicy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-lbcookiestickinesspolicy


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.LBCookieStickinessPolicyProperty`)[] or undefined


   .. py:attribute:: loadBalancerName

      ``AWS::ElasticLoadBalancing::LoadBalancer.LoadBalancerName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-elbname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: policies

      ``AWS::ElasticLoadBalancing::LoadBalancer.Policies``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-policies


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.PoliciesProperty`)[] or undefined


   .. py:attribute:: scheme

      ``AWS::ElasticLoadBalancing::LoadBalancer.Scheme``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-scheme


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: securityGroups

      ``AWS::ElasticLoadBalancing::LoadBalancer.SecurityGroups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-securitygroups


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: subnets

      ``AWS::ElasticLoadBalancing::LoadBalancer.Subnets``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-subnets


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: tags

      ``AWS::ElasticLoadBalancing::LoadBalancer.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-elasticloadbalancing-loadbalancer-tags


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`@aws-cdk/cdk.Tag`)[] or undefined



.. py:currentmodule:: @aws-cdk/aws-elasticloadbalancing

